--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,10 +1,11 @@
 .root {
   display: flex;
   flex-direction: column;
+  height: 100vh;
 }
 
 .underHeader {
   display: flex;
   width: 100vw;
-  height: 100%;
+  min-height: calc(100vh - 64px);
 }
