--- a/src/components/Sidebar.module.scss
+++ b/src/components/Sidebar.module.scss
@@ -1,10 +1,34 @@
 .root {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 160px;
+  min-height: 100%;
+  min-width: 160px;
   padding-right: 16px;
-  justify-content: center;
+  justify-content: space-between;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 200px;
+}
+
+.contacts {
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  font-size: 12px;
+  margin-bottom: 64px;
+}
+
+.contactMe {
+  opacity: 0.6;
+}
+
+.email {
+  color: black;
+  text-decoration: none;
+  font-weight: 600;
 }
 
 .link {
