--- a/src/index.scss
+++ b/src/index.scss
@@ -13,3 +13,18 @@ body {
   min-height: 100% !important;
   height: 100%;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: white;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: black;
+  opacity: 0.8;
+  border-radius: 4px;
+}
