--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -1,4 +1,33 @@
+@import "../base.scss";
+
 .root {
-  width: 100%;
-  height: 64px;
+  display: none;
+
+  @include tabletDown {
+    position: sticky;
+    top: 0;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    min-height: 64px;
+  }
+}
+
+.links {
+  display: flex;
+  justify-content: center;
+}
+
+.link {
+  margin: 8px;
+  color: black;
+  text-decoration: none;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  opacity: 0.6;
+}
+
+.active {
+  opacity: 1;
 }
