--- a/src/components/ImagesGrid.module.scss
+++ b/src/components/ImagesGrid.module.scss
@@ -1,3 +1,5 @@
+@import "../base.scss";
+
 .root {
   display: flex;
   flex-direction: column;
@@ -28,6 +30,27 @@
 .masonryGridColumn > img {
   width: 100%;
   background: grey;
-  margin-bottom: 16px;
+  margin-bottom: 14px;
   border-radius: 4px;
+}
+
+.contacts {
+  display: none;
+
+  @include tabletDown {
+    display: flex;
+    justify-content: center;
+    font-size: 12px;
+  }
+}
+
+.contactMe {
+  opacity: 0.6;
+  margin-right: 8px;
+}
+
+.email {
+  color: black;
+  text-decoration: none;
+  font-weight: 600;
 }
