--- a/src/components/Sidebar.module.scss
+++ b/src/components/Sidebar.module.scss
@@ -1,3 +1,5 @@
+@import "../base.scss";
+
 .root {
   display: flex;
   flex-direction: column;
@@ -5,6 +7,10 @@
   min-width: 160px;
   padding-right: 16px;
   justify-content: space-between;
+
+  @include tabletDown {
+    display: none;
+  }
 }
 
 .links {
