--- a/src/components/ImagesGrid.module.scss
+++ b/src/components/ImagesGrid.module.scss
@@ -6,16 +6,6 @@
   position: relative;
 }
 
-.shadowDiv {
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  height: 16px;
-  z-index: 999;
-  -webkit-box-shadow: 0px 0px 31px 33px white;
-  box-shadow: 0px 0px 31px 33px white;
-}
-
 .masonryGrid {
   max-width: 100%;
   overflow-y: scroll;
@@ -24,33 +14,20 @@
 }
 
 .masonryGridColumn {
-  margin: 0 8px;
+  margin: 0 6px;
+
+  @include phoneDown {
+    margin: 0 2px;
+  }
 }
 
 .masonryGridColumn > img {
   width: 100%;
   background: grey;
-  margin-bottom: 14px;
+  margin-bottom: 8px;
   border-radius: 4px;
-}
 
-.contacts {
-  display: none;
-
-  @include tabletDown {
-    display: flex;
-    justify-content: center;
-    font-size: 12px;
+  @include phoneDown {
+    margin-bottom: 0px;
   }
-}
-
-.contactMe {
-  opacity: 0.6;
-  margin-right: 8px;
-}
-
-.email {
-  color: black;
-  text-decoration: none;
-  font-weight: 600;
 }
